@@ -1,3 +1,8 @@
+2014-01-05  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/metadata.c, ext/oci8/oci8.h, lib/oci8/metadata.rb:
+	    Fix OCI8#describe_table to follow synonyms in a remote database.
+	    Add OCI8::Metadata::Base#obj_link.
+
 2013-12-29  KUBO Takehiro  <kubo@jiubao.org>
 	* NEWS: add changes between 2.1.6 and 2.1.5.
 	* VERSION: change the version to 2.1.6.
